--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
 
 
     </div>
+
+
+    <div>
+       <h2>Some random information</h2>
+       <img src="" alt="image 1">
+       <img src="" alt="image 2">
+       <img src="" alt="image 3">
+       <img src="" alt="image 4">
+
+    </div>
     
 </body>
 </html>
